--- a/README
+++ b/README
@@ -48,3 +48,4 @@ Copy opensearchadmin.ini_INSTALL to opensearchadmin.ini and edit it to reflect y
 Copy opensearchadmin.wsdl_INSTALL to opensearchadmin.wsdl and modify
 the location of the service (at the end of the file)
 
+Consider copying robots.txt_INSTALL to robots.txt
